--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
+  audioplayers: ^1.1.0
+
   # Use Audioplayers dependency version 0.17.4
 
 dev_dependencies:
